src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void ALIKED_Delete(void* self);
extern "C" __declspec(dllexport) void* ALIKED_create_0(const char* modelPath, void* params);
extern "C" __declspec(dllexport) void ALIKED_Params_Delete(void* self);
extern "C" __declspec(dllexport) void* ALIKED_Params_New_0();
extern "C" __declspec(dllexport) cv::Size ALIKED_Params_inputSize_get(void* self);
extern "C" __declspec(dllexport) void ALIKED_Params_inputSize_set(void* self, cv::Size val);
extern "C" __declspec(dllexport) bool ALIKED_Params_normalizeDescriptors_get(void* self);
extern "C" __declspec(dllexport) void ALIKED_Params_normalizeDescriptors_set(void* self, bool val);
extern "C" __declspec(dllexport) int ALIKED_Params_engine_get(void* self);
extern "C" __declspec(dllexport) void ALIKED_Params_engine_set(void* self, int val);
extern "C" __declspec(dllexport) int ALIKED_Params_backend_get(void* self);
extern "C" __declspec(dllexport) void ALIKED_Params_backend_set(void* self, int val);
extern "C" __declspec(dllexport) int ALIKED_Params_target_get(void* self);
extern "C" __declspec(dllexport) void ALIKED_Params_target_set(void* self, int val);
extern "C" __declspec(dllexport) void ANNIndex_Delete(void* self);
extern "C" __declspec(dllexport) void ANNIndex_addItems_0(void* self, void* features);
extern "C" __declspec(dllexport) void ANNIndex_build_0(void* self, int trees);
extern "C" __declspec(dllexport) void ANNIndex_knnSearch_0(void* self, void* query, void* indices, void* dists, int knn, int search_k);
extern "C" __declspec(dllexport) void ANNIndex_save_0(void* self, const char* filename, bool prefault);
extern "C" __declspec(dllexport) void ANNIndex_load_0(void* self, const char* filename, bool prefault);
extern "C" __declspec(dllexport) int ANNIndex_getTreeNumber_0(void* self);
extern "C" __declspec(dllexport) int ANNIndex_getItemNumber_0(void* self);
extern "C" __declspec(dllexport) bool ANNIndex_setOnDiskBuild_0(void* self, const char* filename);
extern "C" __declspec(dllexport) void ANNIndex_setSeed_0(void* self, int seed);
extern "C" __declspec(dllexport) void* ANNIndex_create_0(int dim, void* distType);
extern "C" __declspec(dllexport) void AffineFeature_Delete(void* self);
extern "C" __declspec(dllexport) void* AffineFeature_create_0(void* backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase);
extern "C" __declspec(dllexport) void AffineFeature_setViewParams_0(void* self, void* tilts, void* rolls);
extern "C" __declspec(dllexport) void AffineFeature_getViewParams_0(void* self, void* tilts, void* rolls);
extern "C" __declspec(dllexport) const char* AffineFeature_getDefaultName_0(void* self);
extern "C" __declspec(dllexport) void BFMatcher_Delete(void* self);
extern "C" __declspec(dllexport) void* BFMatcher_New_0(int normType, bool crossCheck);
extern "C" __declspec(dllexport) void* BFMatcher_create_0(int normType, bool crossCheck);
extern "C" __declspec(dllexport) void DescriptorMatcher_Delete(void* self);
extern "C" __declspec(dllexport) void DescriptorMatcher_add_0(void* self, void* descriptors);
extern "C" __declspec(dllexport) void* DescriptorMatcher_getTrainDescriptors_0(void* self);
extern "C" __declspec(dllexport) void DescriptorMatcher_clear_0(void* self);
extern "C" __declspec(dllexport) bool DescriptorMatcher_empty_0(void* self);
extern "C" __declspec(dllexport) bool DescriptorMatcher_isMaskSupported_0(void* self);
extern "C" __declspec(dllexport) void DescriptorMatcher_train_0(void* self);
extern "C" __declspec(dllexport) void DescriptorMatcher_match_0(void* self, void* queryDescriptors, void* trainDescriptors, void* matches, void* mask);
extern "C" __declspec(dllexport) void DescriptorMatcher_knnMatch_0(void* self, void* queryDescriptors, void* trainDescriptors, void* matches, int k, void* mask, bool compactResult);
extern "C" __declspec(dllexport) void DescriptorMatcher_radiusMatch_0(void* self, void* queryDescriptors, void* trainDescriptors, void* matches, float maxDistance, void* mask, bool compactResult);
extern "C" __declspec(dllexport) void DescriptorMatcher_match_1(void* self, void* queryDescriptors, void* matches, void* masks);
extern "C" __declspec(dllexport) void DescriptorMatcher_knnMatch_1(void* self, void* queryDescriptors, void* matches, int k, void* masks, bool compactResult);
extern "C" __declspec(dllexport) void DescriptorMatcher_radiusMatch_1(void* self, void* queryDescriptors, void* matches, float maxDistance, void* masks, bool compactResult);
extern "C" __declspec(dllexport) void DescriptorMatcher_write_0(void* self, const char* fileName);
extern "C" __declspec(dllexport) void DescriptorMatcher_read_0(void* self, const char* fileName);
extern "C" __declspec(dllexport) void DescriptorMatcher_read_1(void* self, void* arg1);
extern "C" __declspec(dllexport) void* DescriptorMatcher_clone_0(void* self, bool emptyTrainData);
extern "C" __declspec(dllexport) void* DescriptorMatcher_create_0(const char* descriptorMatcherType);
extern "C" __declspec(dllexport) void* DescriptorMatcher_create_1(void* matcherType);
extern "C" __declspec(dllexport) void DescriptorMatcher_write_1(void* self, void* fs, const char* name);
extern "C" __declspec(dllexport) void FastFeatureDetector_Delete(void* self);
extern "C" __declspec(dllexport) void* FastFeatureDetector_create_0(int threshold, bool nonmaxSuppression, void* type);
extern "C" __declspec(dllexport) void FastFeatureDetector_setThreshold_0(void* self, int threshold);
extern "C" __declspec(dllexport) int FastFeatureDetector_getThreshold_0(void* self);