src/OpenCV5Sharp/Generated/NativeMethods.Features.cs


namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ALIKED_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ALIKED_create_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? modelPath, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ALIKED_Params_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ALIKED_Params_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern Size ALIKED_Params_inputSize_get(AlikedParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ALIKED_Params_inputSize_set(AlikedParamsHandle self, Size val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ALIKED_Params_normalizeDescriptors_get(AlikedParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ALIKED_Params_normalizeDescriptors_set(AlikedParamsHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ALIKED_Params_engine_get(AlikedParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ALIKED_Params_engine_set(AlikedParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ALIKED_Params_backend_get(AlikedParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ALIKED_Params_backend_set(AlikedParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ALIKED_Params_target_get(AlikedParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ALIKED_Params_target_set(AlikedParamsHandle self, int val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ANNIndex_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ANNIndex_addItems_0(ANNIndexHandle self, MatHandle features);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ANNIndex_build_0(ANNIndexHandle self, int trees);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ANNIndex_knnSearch_0(ANNIndexHandle self, MatHandle query, MatHandle indices, MatHandle dists, int knn, int search_k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ANNIndex_save_0(ANNIndexHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, [MarshalAs(UnmanagedType.U1)] bool prefault);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ANNIndex_load_0(ANNIndexHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, [MarshalAs(UnmanagedType.U1)] bool prefault);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ANNIndex_getTreeNumber_0(ANNIndexHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ANNIndex_getItemNumber_0(ANNIndexHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool ANNIndex_setOnDiskBuild_0(ANNIndexHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void ANNIndex_setSeed_0(ANNIndexHandle self, int seed);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ANNIndex_create_0(int dim, int distType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AffineFeature_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr AffineFeature_create_0(Feature2DHandle backend, int maxTilt, int minTilt, float tiltStep, float rotateStepBase);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AffineFeature_setViewParams_0(AffineFeatureHandle self, IntPtr tilts, IntPtr rolls);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void AffineFeature_getViewParams_0(AffineFeatureHandle self, IntPtr tilts, IntPtr rolls);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr AffineFeature_getDefaultName_0(AffineFeatureHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void BFMatcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr BFMatcher_New_0(int normType, [MarshalAs(UnmanagedType.U1)] bool crossCheck);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr BFMatcher_create_0(int normType, [MarshalAs(UnmanagedType.U1)] bool crossCheck);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_add_0(DescriptorMatcherHandle self, IntPtr descriptors);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr DescriptorMatcher_getTrainDescriptors_0(DescriptorMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_clear_0(DescriptorMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool DescriptorMatcher_empty_0(DescriptorMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool DescriptorMatcher_isMaskSupported_0(DescriptorMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_train_0(DescriptorMatcherHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_match_0(DescriptorMatcherHandle self, MatHandle queryDescriptors, MatHandle trainDescriptors, IntPtr matches, IntPtr mask);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_knnMatch_0(DescriptorMatcherHandle self, MatHandle queryDescriptors, MatHandle trainDescriptors, IntPtr matches, int k, IntPtr mask, [MarshalAs(UnmanagedType.U1)] bool compactResult);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_radiusMatch_0(DescriptorMatcherHandle self, MatHandle queryDescriptors, MatHandle trainDescriptors, IntPtr matches, float maxDistance, IntPtr mask, [MarshalAs(UnmanagedType.U1)] bool compactResult);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_match_1(DescriptorMatcherHandle self, MatHandle queryDescriptors, IntPtr matches, IntPtr masks);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_knnMatch_1(DescriptorMatcherHandle self, MatHandle queryDescriptors, IntPtr matches, int k, IntPtr masks, [MarshalAs(UnmanagedType.U1)] bool compactResult);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_radiusMatch_1(DescriptorMatcherHandle self, MatHandle queryDescriptors, IntPtr matches, float maxDistance, IntPtr masks, [MarshalAs(UnmanagedType.U1)] bool compactResult);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_write_0(DescriptorMatcherHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? fileName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_read_0(DescriptorMatcherHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? fileName);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_read_1(DescriptorMatcherHandle self, FileNodeHandle arg1);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr DescriptorMatcher_clone_0(DescriptorMatcherHandle self, [MarshalAs(UnmanagedType.U1)] bool emptyTrainData);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr DescriptorMatcher_create_0([MarshalAs(UnmanagedType.LPUTF8Str)] string? descriptorMatcherType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr DescriptorMatcher_create_1(int matcherType);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void DescriptorMatcher_write_1(DescriptorMatcherHandle self, FileStorageHandle fs, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FastFeatureDetector_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr FastFeatureDetector_create_0(int threshold, [MarshalAs(UnmanagedType.U1)] bool nonmaxSuppression, int type);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void FastFeatureDetector_setThreshold_0(FastFeatureDetectorHandle self, int threshold);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int FastFeatureDetector_getThreshold_0(FastFeatureDetectorHandle self);
